# adventofcode

./: .gitignore  README.md
2015/1/: answer1.py  answer2.py
2015/10/: answer1.py  answer2.py
2015/11/: answer1.py  answer2.py
2015/12/: answer1.py  answer2.py
2015/13/: answer1.py  answer2.py
2015/14/: answer1.py  answer2.py
2015/15/: answer1.py  answer2.py
2015/16/: answer1.py  answer2.py
2015/17/: answer1.py  answer2.py
2015/18/: answer1.py  answer2.py
2015/19/: answer1.py  answer2.cpp  answer2.py
2015/2/: answer1.py  answer2.py
2015/20/: answer1.py  answer2.py
2015/21/: answer1.py  answer2.py
2015/22/: answer1.cpp  answer2.cpp
2015/23/: answer1.py  answer2.py
2015/24/: answer1.py  answer2.py
2015/25/: answer1.py
2015/3/: answer1.py  answer2.py
2015/4/: answer1.py  answer2.py
2015/5/: answer1.py  answer2.py
2015/6/: answer1.py  answer2.py
2015/7/: answer1.py  answer2.py
2015/8/: answer1.py  answer2.py
2015/9/: answer1.py  answer2.py
2016/: Cargo.toml
2016/src/: day1.rs  day2.rs  day3.rs  day4.rs  lib.rs  main.rs
2017/1/: answer1.py  answer2.py
2017/2/: answer1.py  answer2.py
2017/3/: answer1.py  answer2.py
2017/4/: answer1.py  answer2.py
2017/5/: answer1.py  answer2.py
2017/6/: answer1.py
2017/7/: answer1.py  answer2.py
2017/8/: answer1.py  answer2.py
2017/9/: answer1.py  answer2.py
2019/: Amp.py
2019/1/: answer1.py  answer2.py
2019/10/: answer1.py  answer2.py
2019/11/: answer1.py  answer2.py
2019/12/: answer1.py  answer2.py
2019/13/: answer1.py  answer2.py
2019/14/: answer1.py  answer2.py
2019/15/: answer1.py  answer2.py
2019/16/: answer1.py  answer2.cpp
2019/17/: answer1.py  answer2.py
2019/18/: answer1.cpp  answer2.cpp  test.cpp
2019/19/: answer1.py  answer2.py
2019/2/: answer1.py  answer2.py
2019/20/: answer1.cpp  answer2.cpp
2019/21/: answer1.py  answer2.py
2019/22/: answer1.cpp  answer2.cpp  answer3.cpp  sol.py  utils.py
2019/23/: answer1.py  answer2.py
2019/24/: answer1.py  answer2.py
2019/25/: answer1.py
2019/3/: answer1.py  answer2.py
2019/4/: answer1.py  answer2.py
2019/5/: answer1.py  answer2.py
2019/6/: answer1.py  answer2.py
2019/7/: answer1.py  answer2.py
2019/8/: answer1.py  answer2.py
2019/9/: answer1.py  answer2.py
2020/1/: answer1.py  answer2.py
2020/10/: answer1.py  answer2.py
2020/11/: answer1.py  answer2.py
2020/12/: answer1.py  answer2.py
2020/13/: answer1.py  answer2.py
2020/14/: answer1.py  answer2.py
2020/15/: answer1.py  answer2.py
2020/16/: answer1.py  answer2.py
2020/17/: answer1.py  answer2.py
2020/18/: answer1.py  answer2.py
2020/19/: answer1.py  answer2.py
2020/2/: answer1.py  answer2.py
2022/: Cargo.toml
2022/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
2023/: Cargo.toml
2023/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs
(+87 files in other folders)
