[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
derive_more = "0.99.17"
itertools = "0.10.5"
keyed_priority_queue = "0.4.1"
nalgebra = "0.31.4"
regex = { version = "1.7.0", features = ["pattern"] } 
scan_fmt = "0.2.6"

[profile.test]
opt-level = 3
