[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
bitmask-enum = "2.2.3"
itertools = "0.10.5"
memoize = "0.4.1"
num = "0.4.1"
rayon = "1.8.0"
regex = "1.10.2"
scan_fmt = "0.2.6"

[profile.test]
opt-level = 3


[lints.clippy]
# "-Dunsafe_code",
# "-Wfuture_incompatible",
# "-Wnonstandard_style",
# "-Wrust_2018_idioms",
all = "deny"
await_holding_lock = "deny"
char_lit_as_u8 = "deny"
checked_conversions = "deny"
dbg_macro = "deny"
debug_assert_with_mut_call = "deny"
doc_markdown = "deny"
empty_enum = "deny"
enum_glob_use = "deny"
exit = "deny"
expl_impl_clone_on_copy = "deny"
explicit_deref_methods = "deny"
explicit_into_iter_loop = "deny"
fallible_impl_from = "deny"
filter_map_next = "deny"
flat_map_option = "deny"
float_cmp_const = "deny"
fn_params_excessive_bools = "deny"
from_iter_instead_of_collect = "deny"
if_let_mutex = "deny"
implicit_clone = "deny"
imprecise_flops = "deny"
inefficient_to_string = "deny"
invalid_upcast_comparisons = "deny"
large_digit_groups = "deny"
large_stack_arrays = "deny"
large_types_passed_by_value = "deny"
let_unit_value = "deny"
linkedlist = "deny"
lossy_float_literal = "deny"
macro_use_imports = "deny"
manual_ok_or = "deny"
map_err_ignore = "deny"
map_flatten = "deny"
map_unwrap_or = "deny"
match_on_vec_items = "deny"
match_same_arms = "deny"
match_wild_err_arm = "deny"
match_wildcard_for_single_variants = "deny"
mem_forget = "deny"
mismatched_target_os = "deny"
missing_enforced_import_renames = "deny"
mut_mut = "deny"
mutex_integer = "deny"
needless_borrow = "deny"
needless_continue = "deny"
needless_for_each = "deny"
option_option = "deny"
path_buf_push_overwrite = "deny"
ptr_as_ptr = "deny"
rc_mutex = "deny"
ref_option_ref = "deny"
rest_pat_in_fully_bound_structs = "deny"
same_functions_in_if_condition = "deny"
semicolon_if_nothing_returned = "deny"
single_match_else = "deny"
string_add_assign = "deny"
string_add = "deny"
string_lit_as_bytes = "deny"
string_to_string = "deny"
todo = "deny"
trait_duplication_in_bounds = "deny"
unimplemented = "deny"
unnested_or_patterns = "deny"
unused_self = "deny"
useless_transmute = "deny"
verbose_file_reads = "deny"
zero_sized_map_values = "deny"
